# permaculture

./: .buildinfo  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .venv.pth  CHANGES.rst  CONTRIBUTING.rst  Dockerfile  LICENSE.rst  Makefile  README.rst  STYLE_GUIDE.rst  changes.html  contributing.html  de.html  genindex.html  index.html  la-ferme-impossible.html  la-revolution-dun-seul-brin-de-paille.html  license.html  log-config.dev.yaml  log-config.yaml  modules.html  nc.html  objects.inv  permaculture.html  permaculture.locales.html  permaculture.testing.html  pfaf.html  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  style_guide.html  usda-plants.html  videos.html
.github/: CODEOWNERS  renovate.json
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: main.yml  publish.yml  release.yml  renovate.yaml  test.yml
_sources/: de.rst.txt  la-ferme-impossible.rst.txt  license.rst.txt  permaculture.rst.txt  usda-plants.rst.txt
_static/: documentation_options.js
books/: la-ferme-impossible.rst  la-revolution-dun-seul-brin-de-paille.rst
changeme/: __init__.py
docs/: conf.py  index.rst  la-revolution-dun-seul-brin-de-paille.rst  modules.rst  nc.rst  permaculture.locales.rst  permaculture.rst  permaculture.testing.rst  permaculture.usda.rst  pfaf.rst  style_guide.rst  usda-phytochem.rst  videos.rst
permaculture/: action.py  api.py  app.py  browser.py  cache.py  cli.py  command.py  converter.py  data.py  database.py  de.py  google.py  html.py  http.py  index.html  ingestor.py  ipinfo.py  iterator.py  local.py  location.py  logger.py  mcp_server.py  nc.py  nlp.py  nominatim.py  pfaf.py  plant.py  priority.py  query.py  registry.py  runner.py  sdp.py  serializer.py  sink.py  sqlite.py  storage.py  tokenizer.py  unit.py  usda.py  usda_food.py  (+3 more)
permaculture/de/: resources.py
permaculture/google/: spreadsheets.py
permaculture/locales/: __init__.py
permaculture/locales/en/LC_MESSAGES/: api.po  de.po  display.po  nc.po  pfaf.po  sdp.po  testing.po  usda-phytochem.po  usda-plants.po  usda.po
permaculture/locales/fr/LC_MESSAGES/: api.po  de.po  display.po  web.po
permaculture/static/: index.html
permaculture/testing/: fixtures.py  logger.py  unique.py
permaculture/usda/: fdc.py  phytochem.py  plants.py
permaculture/wikipedia/: __init__.py  companion.py
scripts/: msgfmt.py
tests/integration/: test_cli.py  test_command.py  test_http.py  test_local.py
tests/integration/fixtures/: plants.json
tests/unit/: conftest.py  stubs.py  test_action.py  test_api.py  test_app.py  test_browser.py  test_cache.py  test_changeme.py  test_cli.py  test_command.py  test_converter.py  test_data.py  test_database.py  test_de.py  test_google.py  test_html.py  test_http.py  test_ingestor.py  test_ipinfo.py  test_iterator.py  test_local.py  test_locales.py  test_location.py  test_logger.py  test_mcp_server.py  test_nc.py  test_nlp.py  test_nominatim.py  test_permaculture.py  test_pfaf.py  test_pfaf.xls  test_priority.py  test_registry.py  test_runner.py  test_sdp.py  test_serializer.py  test_sink.py  test_sqlite.py  test_storage.py  test_tokenizer.py  (+6 more)
tests/unit/de/: test_resources.py
tests/unit/google/: test_spreadsheets.py
tests/unit/testing/: test_logger.py  test_unique.py
tests/unit/usda/: test_fdc.py  test_phytochem.py  test_plants.py
tests/unit/wikipedia/: test_companion.py
