[project]
name = "permaculture"
dynamic = ["version"]
description = "Permaculture design toolkit"
authors = [
    {name = "Marc Tardif", email = "marc@taram.ca"},
]
readme = "README.rst"
repository = "https://github.com/cr3/permaculture"
requires-python = ">=3.12,<4.0"
dependencies = [
  "appdirs>=1.4.4,<2.0.0",
  "attrs>=23.1.0",
  "beautifulsoup4>=4.12.2,<5.0.0",
  "brotli>=1.2.0,<2.0.0",
  "configargparse>=1.7,<2.0",
  "defusedxml>=0.7.1,<1.0.0",
  "more-itertools>=10.1.0,<11.0.0",
  "pyyaml>=6.0.1,<7.0.0",
  "requests>=2.31.0,<3.0.0",
  "unidecode>=1.3.6,<2.0.0",
  "xlrd>=2.0.1,<3.0.0",
  "yarl>=1.9.2,<2.0.0",
]

[project.optional-dependencies]

de = [
  "playwright>=1.40.0,<2.0.0",
]

mcp = [
  "mcp>=1.0.0,<2.0.0",
]

web = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
]

test = [
  "coverage>=7.2.3,<8.0.0",
  "pyhamcrest>=2.1.0,<3.0.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-asyncio>=1.3.0,<2.0.0",
  "pytest-unique>=0.1.7,<1.0.0",
]

check = [
  "ruff>=0.15.0,<1.0.0",
]

docs = [
  "sphinx>=9.1.0,<9.2.0",
  "sphinxcontrib-log-cabinet>=1.0.1,<2.0.0",
  "sphinx-rtd-theme>=3.1.0,<3.2.0",
]

[project.entry-points."pytest11"]
permaculture = "permaculture.testing.fixtures"

[project.entry-points."permaculture.ingestors"]
"de" = "permaculture.de:DEIngestor"
"local" = "permaculture.local:LocalIngestor"
"nc" = "permaculture.nc:NCIngestor"
"pfaf" = "permaculture.pfaf:PFAFIngestor"
"sdp" = "permaculture.sdp:SDPIngestor"
"usda" = "permaculture.usda:USDAIngestor"

[project.entry-points."permaculture.serializers"]
"application/json" = "permaculture.serializer:json_serializer"
"application/octet-stream" = "permaculture.serializer:octet_stream_serializer"
"application/x-pickle" = "permaculture.serializer:pickle_serializer"
"application/x-www-form-urlencoded" = "permaculture.serializer:www_form_serializer"
"application/x-yaml" = "permaculture.serializer:yaml_serializer"
"text/csv" = "permaculture.serializer:text_csv_serializer"
"text/plain" = "permaculture.serializer:text_plain_serializer"

[project.entry-points."permaculture.storage"]
"file" = "permaculture.storage:FileStorage"
"memory" = "permaculture.storage:MemoryStorage"
"null" = "permaculture.storage:NullStorage"
"sqlite" = "permaculture.storage:SqliteStorage"

[project.entry-points."pytest_unique"]
cookie = "permaculture.testing.unique:unique_cookie"
cookies = "permaculture.testing.unique:unique_cookies"
plant = "permaculture.testing.unique:unique_plant"
token = "permaculture.testing.unique:unique_token"

[project.scripts]
permaculture = "permaculture.cli:main"
permaculture-mcp = "permaculture.mcp_server:main"
permaculture-web = "permaculture.api:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = [
  "permaculture/locales/*/LC_MESSAGES/*.mo",
  "permaculture/static/*.html",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
target-version = "py312"
line-length = 79
fix = true
lint.select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
lint.ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    # Create your own exception
    "TRY002",
    # Avoid specifying long messages outside the exception class
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

# Pytest options:
#   https://docs.pytest.org/en/6.2.x/reference.html#ini-options-ref
[tool.pytest.ini_options]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.rst",
]
testpaths = [
    "permaculture",
    "docs",
    "tests",
]

# Coverage options:
#   https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.paths]
source = [
    "permaculture",
    "*/*/site-packages",
]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
source = [
    "permaculture",
]
